fix z-index

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -124,7 +124,7 @@
 
   @media only screen and (max-width: 48rem) {
     display: flex;
-    z-index: 10;
+    z-index: 10000;
   }
 
   &--active {
